# esp-claw

application/edge_agent/: sdkconfig.defaults
application/edge_agent/boards/community/XiaozhiAI/: board_devices.yaml  board_info.yaml  board_peripherals.yaml
components/claw_capabilities/cap_im_platform/src/: cap_im_qq.c
components/common/app_claw/: Kconfig  app_lua_modules.c  idf_component.yml
components/lua_modules/lua_module_ble/: CMakeLists.txt  README.md
components/lua_modules/lua_module_ble/src/: lua_module_ble.c  lua_module_ble.h
components/lua_modules/lua_module_ble/test/: test_ble.lua
